Exercício de apresentação

--- a/Exercicio_de_apresentação.html
+++ b/Exercicio_de_apresentação.html
@@ -34,15 +34,28 @@ Como conteúdo desta página, além do que foi pedido, adicionar também
     <title>Document</title>
 </head>
 <body>
-    <h1>Cachorros e Filhotes</h1>
-    <p>O cão, no Brasil também chamado de cachorro, é um mamífero carnívoro da família 
-        dos canídeos, subespécie do lobo, e talvez o mais antigo animal domesticado pelo 
-        ser humano. Teorias postulam que surgiu do lobo cinzento no continente asiático há 
-        mais de 100 000 anos</p>
+    <h1>Adoção de cachorros</h1>
+    <h2>Um ato de amor</h2>
+    <p>Adoção de cachorro, além de um ato de amor e responsabilidade social,
+         beneficia todas as partes envolvidas: abrigo, adotado e adotante. Nos 
+         últimos tempos, a ciência tem se dedicado cada vez mais a entender como
+          e por que a companhia de um animal de estimação faz tão bem para a saúde humana.
+           Definitivamente, não é à toa que os cachorros são considerados 
+           <i>“os melhores amigos do homem”</i>.</p>
+    <h2>Benefícios</h2>
+    <p>
+        De acordo com a ciência, animais de estimação, especialmente o cachorro e o gato, 
+        podem reduzir o estresse, a ansiedade e a depressão. Além disso, eles aliviam os 
+        efeitos da solidão e estimulam atividades físicas, proporcionando benefícios tanto
+         à saúde mental como à saúde física. Para as crianças, as vantagens da adoção de cachorro
+          são ainda maiores: os cães podem ajudar os pequenos a desenvolver mais segurança, empatia, 
+          interesse por atividades físicas e consciência dos sentimentos de outras pessoas e dos animais.
+
+    </p>
     <nav>
         <ul>
-            <li><a href="../Rockeatseat/diretório principal/contact.html">Filhote</a></li>
-            <li><a href="../Rockeatseat/diretório principal/index.html">Cachorro</a></li>
+            <li><a href="../Rockeatseat/diretório principal/contact.html">Contato</a></li>
+            <li><a href="../Rockeatseat/diretório principal/Imagem.html">Imagens dos animais</a></li>
             
         </ul>
 </body>
