--- a/diretório principal/contact.html
+++ b/diretório principal/contact.html
@@ -1,4 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>contato</title>
+</head>
+<body></body>
+<ul>
+    <h1>Contato</h1>
 <p>
-    <a>
-<img src="../files/Filhote.jpg" alt="Filhote"></a>
+    <li><a href="tel:+5511975274550">Whatzapp</a></li>
+    <li><a href="mail:leticiadiniz127@gmail.com">E-mail</a></li>
+    <li><a href="https://www.facebook.com/leticiadinizsantos.diniz/">Facebook</a></li>
+   
 </p>
+</ul>
+    
+    
+</body>
+</html>
