--- a/Exercicio_de_apresentação.html
+++ b/Exercicio_de_apresentação.html
@@ -58,5 +58,6 @@ Como conteúdo desta página, além do que foi pedido, adicionar também
             <li><a href="../Rockeatseat/diretório principal/Imagem.html">Imagens dos animais</a></li>
             
         </ul>
+    </nav>
 </body>
 </html>
