--- a/diretório principal/Imagem.html
+++ b/diretório principal/Imagem.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagens de cães para adoção</title>
+    <H1>Fotos de cachorros que estão para adoção</H1>
 </head>
 <body>
+<nav>
 <ul>
 <p>
-    <a>
 <li><img src="../files/Cachorro.jpg"alt="Cachorro"></a></li>
 </p>
 <p>
  <a>
 <li><img src="../files/Filhote.jpg" alt="Filhote"></a></li>
 </p>
+</nav>
 </ul>
 </body>
 </html>
