--- a/diretório principal/contact.html
+++ b/diretório principal/contact.html
@@ -7,14 +7,16 @@
     <title>contato</title>
 </head>
 <body></body>
+<nav>
 <ul>
     <h1>Contato</h1>
 <p>
-    <li><a href="tel:+5511975274550">Whatzapp</a></li>
-    <li><a href="mail:leticiadiniz127@gmail.com">E-mail</a></li>
+    <li><a href="tel:+5511975274550">+55(11)97527-4550</a></li>
+    <li><a href="mail:leticiadiniz127@gmail.com">E-mail:leticiadiniz127@gmail.com</a></li>
     <li><a href="https://www.facebook.com/leticiadinizsantos.diniz/">Facebook</a></li>
    
 </p>
+</nav>
 </ul>
     
     
