Alteração da navegação

--- a/Exercicio_de_apresentação.html
+++ b/Exercicio_de_apresentação.html
@@ -32,6 +32,13 @@ Como conteúdo desta página, além do que foi pedido, adicionar também
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <nav>
+        <ul>
+          <li><a href="Exercicio_de_apresentação.html">Página inicial</a></li>
+          <li><a href="../Rockeatseat/diretório principal/contact.html">Contato</a></li>
+          <li><a href="../Rockeatseat/diretório principal/Imagem.html">imagens</a></li>
+        </ul>
+      </nav>
 </head>
 <body>
     <h1>Adoção de cachorros</h1>
@@ -52,12 +59,5 @@ Como conteúdo desta página, além do que foi pedido, adicionar também
           interesse por atividades físicas e consciência dos sentimentos de outras pessoas e dos animais.
 
     </p>
-    <nav>
-        <ul>
-            <li><a href="../Rockeatseat/diretório principal/contact.html">Contato</a></li>
-            <li><a href="../Rockeatseat/diretório principal/Imagem.html">Imagens dos animais</a></li>
-            
-        </ul>
-    </nav>
 </body>
 </html>
