--- a/diretório principal/Imagem.html
+++ b/diretório principal/Imagem.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagens de cães para adoção</title>
-    <H1>Fotos de cachorros que estão para adoção</H1>
+    <nav>
+        <ul>
+          <li><a href="Imagem.html">Imagens</a></li>
+          <li><a href="../contact.html">Contato</a></li>
+          <li><a href="../Exercicio_de_apresentação.html">Pagina inicial</a></li>
+        </ul>
+      </nav>
 </head>
 <body>
+    <H1>Fotos de cachorros que estão para adoção</H1>
 <nav>
 <ul>
-<p>
-<li><img src="../files/Cachorro.jpg"alt="Cachorro"></a></li>
-</p>
-<p>
- <a>
-<li><img src="../files/Filhote.jpg" alt="Filhote"></a></li>
-</p>
+<li><a><img src="../files/Cachorro.jpg"alt="Cachorro"></a></li>
+<li><a><img src="../files/Filhote.jpg" alt="Filhote"></a></li>
 </nav>
 </ul>
 </body>
