--- a/diretório principal/contact.html
+++ b/diretório principal/contact.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contato</title>
+    <nav>
+        <ul>
+          <li><a href="contact.html">Contato</a></li>
+          <li><a href="../Exercicio_de_apresentação.html">Pagina inicial</a></li>
+          <li><a href="../Imagem.html">imagens</a></li>
+        </ul>
+      </nav>
 </head>
-<body></body>
+<body>
+    <h1>Contato</h1>
 <nav>
 <ul>
-    <h1>Contato</h1>
-<p>
     <li><a href="tel:+5511975274550">+55(11)97527-4550</a></li>
     <li><a href="mail:leticiadiniz127@gmail.com">E-mail:leticiadiniz127@gmail.com</a></li>
     <li><a href="https://www.facebook.com/leticiadinizsantos.diniz/">Facebook</a></li>
-   
-</p>
+
 </nav>
 </ul>
     
