--- a/video_imagem.html
+++ b/video_imagem.html
@@ -16,7 +16,9 @@
      <a href="https://youtu.be/GNb4FBawH_U">
     <img src="https://i1.sndcdn.com/artworks-000139335822-gpugyo-t500x500.jpg"
      alt="imagem não encontrada"
-     title="Desire Canção de Years & Years">
+     title="Desire Canção de Years & Years"
+     width="400px">
+     
     </a> 
     
     >
