--- a/grid.html
+++ b/grid.html
@@ -3,7 +3,12 @@
 
 
 
-<header>TOPO</header>
+<header>
+    <div>Logo</div>
+    <div>Menu</div>
+
+
+</header>
 <main>Conteúdo</main>
 <aside>Informações adicionais</aside>
 <footer>rodapé</footer>
