--- a/Desafio/portfolio1.html
+++ b/Desafio/portfolio1.html
@@ -19,11 +19,29 @@
             <h1>João Inácio Neto</h1>
             <h2>Full Stack Developer</h2>
         </div>
-
     </div>
+
     <div id="conteudo">
-
     </div>
+    <div id="lista">
+     <li>Brasil</li>
+     <li>Rocketseat</li>
+     <li>birobirobiro</li>
+     <li>joao-inacio-neto</li>
+     <li>birobirobiro</li>
+     <li>https://birobirobiro.dev</li>
+     <li>birobirobiro.dev@gmail.com</li>
+    </div>
+    <div id="tecnologia"> 
+        <h1>Tecnologias</h1>
+        <div class="one">JAVASCRIPT</div>
+        <div class="two">REACTJS</div>
+        <div class="three">NODEJS</div>
+        <div class="four">GIT</div>
+        <div class="five">GITHUB</div>
+        <div class="six">HTML</div>
+        
+</div>
 </body>
 
 </html>
