--- a/Desafio/portfolio1.html
+++ b/Desafio/portfolio1.html
@@ -24,24 +24,27 @@
     <div id="conteudo">
     </div>
     <div id="lista">
-     <li>Brasil</li>
-     <li>Rocketseat</li>
-     <li>birobirobiro</li>
-     <li>joao-inacio-neto</li>
-     <li>birobirobiro</li>
-     <li>https://birobirobiro.dev</li>
-     <li>birobirobiro.dev@gmail.com</li>
+        <li>Brasil</li>
+        <li>Rocketseat</li>
+        <li>birobirobiro</li>
+        <li>joao-inacio-neto</li>
+        <li>birobirobiro</li>
+        <li>https://birobirobiro.dev</li>
+        <li>birobirobiro.dev@gmail.com</li>
     </div>
-    <div id="tecnologia"> 
+    <div id="tecnologia">
         <h1>Tecnologias</h1>
-        <div class="one">JAVASCRIPT</div>
-        <div class="two">REACTJS</div>
-        <div class="three">NODEJS</div>
-        <div class="four">GIT</div>
-        <div class="five">GITHUB</div>
-        <div class="six">HTML</div>
-        
-</div>
+        <div id="tags">
+            <div class="tag">JAVASCRIPT</div>
+            <div class="tag">REACTJS</div>
+            <div class="tag">NODEJS</div>
+            <div class="tag">GIT</div>
+            <div class="tag">GITHUB</div>
+            <div class="tag">HTML</div>
+        </div>
+
+
+    </div>
 </body>
 
 </html>
