--- a/Desafio/portfolio1.html
+++ b/Desafio/portfolio1.html
@@ -24,13 +24,13 @@
     <div id="conteudo">
     </div>
     <div id="lista">
-        <li>Brasil</li>
-        <li>Rocketseat</li>
-        <li>birobirobiro</li>
-        <li>joao-inacio-neto</li>
-        <li>birobirobiro</li>
-        <li>https://birobirobiro.dev</li>
-        <li>birobirobiro.dev@gmail.com</li>
+        <li><img src="imagens_icones/map-pin.svg">Brasil</li>
+        <li><img src="imagens_icones/briefcase.svg">Rocketseat</li>
+        <li><img src="imagens_icones/github.svg">birobirobiro</li>
+        <li><img src="imagens_icones/linkedin.svg">joao-inacio-neto</li>
+        <li><img src="imagens_icones/twitter.svg">birobirobiro</li>
+        <li><img src="imagens_icones/globe.svg">https://birobirobiro.dev</li>
+        <li><img src="imagens_icones/mail.svg">birobirobiro.dev@gmail.com</li>
     </div>
     <div id="tecnologia">
         <h1>Tecnologias</h1>
@@ -42,9 +42,45 @@
             <div class="tag">GITHUB</div>
             <div class="tag">HTML</div>
         </div>
-
-
     </div>
+    <div id="experiencia">
+        <h1>Experiências</h1>
+        <div id="rocket">
+            <div id="data">
+                <li class="rocket">Rocketseat</li>
+                <p class="data">2019 - Atualmente</p>
+                <p class="data">Community Experience</p>
+                <li class="rocket">Rocketseat</li>
+                <p class="data">2019 - Atualmente</p>
+                <p class="data">Community Experience</p>
+                <li class="rocket">Rocketseat</li>
+                <p class="data">2019 - Atualmente</p>
+                <p class="data">Community Experience</p>
+                <li class="rocket">Rocketseat</li>
+                <p class="data">2019 - Atualmente</p>
+                <p class="data">Community Experience</p>
+
+
+            </div>
+            <div id="experiencia">
+                <h1>Educação</h1>
+                <div id="rocket">
+                    <div id="data">
+                        <li class="rocket">Rocketseat</li>
+                        <p class="data">2019 - 2019</p>
+                        <p class="data">GoStack</p>
+                        <li class="rocket">Rocketseat</li>
+                        <p class="data">2019 - 2020</p>
+                        <p class="data">Ignite</p>
+                        <li class="rocket">Rocketseat</li>
+                        <p class="data">2019 - 2021</p>
+                        <p class="data">Ignite Pro</p>
+                        <li class="rocket">Rocketseat</li>
+                        <p class="data">2019 - 2021</p>
+                        <p class="data">Ignite Pro</p>
+        
+        
+                    </div>
 </body>
 
 </html>
