--- a/Desafio/portfolio1.html
+++ b/Desafio/portfolio1.html
@@ -13,74 +13,109 @@
 </head>
 
 <body>
-    <div id="lateral">
-        <div id="perfil">
-            <img src="imagens_icones/Ellipse 1.png">
-            <h1>João Inácio Neto</h1>
-            <h2>Full Stack Developer</h2>
-        </div>
-    </div>
-
-    <div id="conteudo">
-    </div>
-    <div id="lista">
-        <li><img src="imagens_icones/map-pin.svg">Brasil</li>
-        <li><img src="imagens_icones/briefcase.svg">Rocketseat</li>
-        <li><img src="imagens_icones/github.svg">birobirobiro</li>
-        <li><img src="imagens_icones/linkedin.svg">joao-inacio-neto</li>
-        <li><img src="imagens_icones/twitter.svg">birobirobiro</li>
-        <li><img src="imagens_icones/globe.svg">https://birobirobiro.dev</li>
-        <li><img src="imagens_icones/mail.svg">birobirobiro.dev@gmail.com</li>
-    </div>
-    <div id="tecnologia">
-        <h1>Tecnologias</h1>
-        <div id="tags">
-            <div class="tag">JAVASCRIPT</div>
-            <div class="tag">REACTJS</div>
-            <div class="tag">NODEJS</div>
-            <div class="tag">GIT</div>
-            <div class="tag">GITHUB</div>
-            <div class="tag">HTML</div>
-        </div>
-    </div>
-    <div id="experiencia">
-        <h1>Experiências</h1>
-        <div id="rocket">
-            <div id="data">
-                <li class="rocket">Rocketseat</li>
-                <p class="data">2019 - Atualmente</p>
-                <p class="data">Community Experience</p>
-                <li class="rocket">Rocketseat</li>
-                <p class="data">2019 - Atualmente</p>
-                <p class="data">Community Experience</p>
-                <li class="rocket">Rocketseat</li>
-                <p class="data">2019 - Atualmente</p>
-                <p class="data">Community Experience</p>
-                <li class="rocket">Rocketseat</li>
-                <p class="data">2019 - Atualmente</p>
-                <p class="data">Community Experience</p>
-
-
+    <div class="linha">
+        <div id="lateral">
+            <div id="perfil">
+                <img src="imagens_icones/Ellipse 1.png">
+                <h1>João Inácio Neto</h1>
+                <h2>Full Stack Developer</h2>
             </div>
-            <div id="experiencia">
+            <div id="lista">
+                <ul>
+                    <li><img src="imagens_icones/map-pin.svg">Brasil</li>
+                    <li><img src="imagens_icones/briefcase.svg">Rocketseat</li>
+                    <li><img src="imagens_icones/github.svg">birobirobiro</li>
+                    <li><img src="imagens_icones/linkedin.svg">joao-inacio-neto</li>
+                    <li><img src="imagens_icones/twitter.svg">birobirobiro</li>
+                    <li><img src="imagens_icones/globe.svg">https://birobirobiro.dev</li>
+                    <li><img src="imagens_icones/mail.svg">birobirobiro.dev@gmail.com</li>
+                </ul>
+            </div>
+            <div id="tecnologia">
+                <h1>Tecnologias</h1>
+                <div id="tags">
+                    <div class="tag">JAVASCRIPT</div>
+                    <div class="tag">REACTJS</div>
+                    <div class="tag">NODEJS</div>
+                    <div class="tag">GIT</div>
+                    <div class="tag">GITHUB</div>
+                    <div class="tag">HTML</div>
+                </div>
+            </div>
+            <div class="box">
+                <h1>Experiências</h1>
+                <ul>
+                    <li class="rocket">Rocketseat
+                        <p class="data">2019 - Atualmente</p>
+                        <p class="data_negrito">Community Experience</p>
+                    </li>
+                    <li class="rocket">Rocketseat
+                        <p class="data">2019 - Atualmente</p>
+                        <p class="data_negrito">Community Experience</p>
+                    </li>
+                    <li class="rocket">Rocketseat
+                        <p class="data">2019 - Atualmente</p>
+                        <p class="data_negrito">Community Experience</p>
+                    </li>
+                    <li class="rocket">Rocketseat
+                        <p class="data">2019 - Atualmente</p>
+                        <p class="data_negrito">Community Experience</p>
+
+                    </li>
+
+                </ul>
+            </div>
+            <div class="box">
                 <h1>Educação</h1>
-                <div id="rocket">
-                    <div id="data">
-                        <li class="rocket">Rocketseat</li>
+
+                <ul>
+                    <li class="rocket">Rocketseat
                         <p class="data">2019 - 2019</p>
-                        <p class="data">GoStack</p>
-                        <li class="rocket">Rocketseat</li>
+                        <p class="data_negrito">GoStack</p>
+                    </li>
+                    <li class="rocket">Rocketseat
                         <p class="data">2019 - 2020</p>
-                        <p class="data">Ignite</p>
-                        <li class="rocket">Rocketseat</li>
+                        <p class="data_negrito">Ignite</p>
+                    </li>
+                    <li class="rocket">Rocketseat
                         <p class="data">2019 - 2021</p>
-                        <p class="data">Ignite Pro</p>
-                        <li class="rocket">Rocketseat</li>
+                        <p class="data_negrito">Ignite Pro</p>
+                    </li>
+                    <li class="rocket">Rocketseat
                         <p class="data">2019 - 2021</p>
-                        <p class="data">Ignite Pro</p>
-        
-        
-                    </div>
+                        <p class="data_negrito">Ignite Pro</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="conteudo">
+            <div class="box">
+                <h1>Educação</h1>
+
+                <ul>
+                    <li class="rocket">Rocketseat
+                        <p class="data">2019 - 2019</p>
+                        <p class="data_negrito">GoStack</p>
+                    </li>
+                    <li class="rocket">Rocketseat
+                        <p class="data">2019 - 2020</p>
+                        <p class="data_negrito">Ignite</p>
+                    </li>
+                    <li class="rocket">Rocketseat
+                        <p class="data">2019 - 2021</p>
+                        <p class="data_negrito">Ignite Pro</p>
+                    </li>
+                    <li class="rocket">Rocketseat
+                        <p class="data">2019 - 2021</p>
+                        <p class="data_negrito">Ignite Pro</p>
+                    </li>
+                </ul>
+            </div>
+
+
+        </div>
+    </div>
+
 </body>
 
 </html>
