--- a/Desafio/portfolio1.html
+++ b/Desafio/portfolio1.html
@@ -89,31 +89,29 @@
             </div>
         </div>
         <div id="conteudo">
-            <div class="box">
-                <h1>Educação</h1>
-
-                <ul>
-                    <li class="rocket">Rocketseat
-                        <p class="data">2019 - 2019</p>
-                        <p class="data_negrito">GoStack</p>
-                    </li>
-                    <li class="rocket">Rocketseat
-                        <p class="data">2019 - 2020</p>
-                        <p class="data_negrito">Ignite</p>
-                    </li>
-                    <li class="rocket">Rocketseat
-                        <p class="data">2019 - 2021</p>
-                        <p class="data_negrito">Ignite Pro</p>
-                    </li>
-                    <li class="rocket">Rocketseat
-                        <p class="data">2019 - 2021</p>
-                        <p class="data_negrito">Ignite Pro</p>
-                    </li>
-                </ul>
+            <div class="linha">
+                <div class="projeto">
+                    <p>My projects&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size=2>Veja todos</font>
+                    </p>
+                </div>
+                <div class="onix">
+                    <h1><img src="imagens_icones/folder.svg">my-onix</h1>
+                    <h2>Consulte os códigos de erro que aparecem no painel do veículo Onix.</h2>
+                    <p><img src="imagens_icones/star.svg">100<img src="imagens_icones/git-branch.svg"> 100 <img
+                            src="imagens_icones/Ellipse 2.png">JavaScript</p>
+                </div>
+                <div class="onix">
+                    <h1><img src="imagens_icones/folder.svg">my-onix</h1>
+                    <h2>Consulte os códigos de erro que aparecem no painel do veículo Onix.</h2>
+                    <p><img src="imagens_icones/star.svg">100<img src="imagens_icones/git-branch.svg"> 100 <img
+                            src="imagens_icones/Ellipse 2.png">JavaScript</p>
+                </div>
+                <div class="projeto">
+                    <p>Recent Posts</p>
+                </div>
             </div>
-
-
         </div>
+
     </div>
 
 </body>
