--- a/Desafio/portfolio1.html
+++ b/Desafio/portfolio1.html
@@ -91,8 +91,7 @@
         <div id="conteudo">
             <div class="linha">
                 <div class="projeto">
-                    <p>My projects&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size=2>Veja todos</font>
-                    </p>
+                    <span> My projects</span><span class="rightside"> Veja todos</span>
                 </div>
                 <div class="onix">
                     <h1><img src="imagens_icones/folder.svg">my-onix</h1>
