--- a/Desafio/portfolio1.html
+++ b/Desafio/portfolio1.html
@@ -113,9 +113,7 @@
         <div id="conteudo">
             <div class="linha">
                 <div class="erro">
-                    <p><img src="imagens_icones/Ellipse 1.png">Erro adb devices no Genymotion e Android Studio (React
-                        Native)
-                    </p>
+                    <p><img src="imagens_icones/Ellipse 1.png">Erro adb devices no Genymotion e Android Studio (React Native)</p>
                     <p class="anos">2 anos atrás</p>
                     <p class="erro_adb">Erro adb devices no Genymotion e Android Studio (React Native)</p>
                     <p class="genimotion">#react-native #genimotion #genimotion #genimotion</p>
