--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -1,5 +1,18 @@
-<form>
-<fieldset>
-    <legend>Contato</legend>
-</fieldset>
+<form action="" method="post">
+    <div>
+        <label for="nome">Nome Completo:</label>
+        <input type="text" id="nome" />
+        <button type="button">Enviar</button>
+    </div>
+    <div>
+        <label for="email">E-mail:</label>
+        <input type="email" autocomplete="email" required id="email" />
+        <button type="button">Enviar</button>
+    </div>
+    <div>
+        <label for="url">Seu documento:</label>
+        <imput type="url">
+        <button type="button">Enviar</button>
+
+    </div>
 </form>
